# misc

projects/apache-beam/simple-pipeline/: main.py  pyproject.toml
