[tool.poetry]
name = "apache-beam-simple-pipeline"
version = "0.1.0"
description = ""
authors = ["Annekin Meyburgh <annekin001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-beam = "^2.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
